# GroundSegmentationLiDAR16

./: README.md
MyGroundSeg/: CMakeLists.txt  README.md  testLiDAR16_rslidar.pcd
MyGroundSeg/src/: BasicSource.h  GroundSegmentor.cpp  GroundSegmentor.h  Param.h  main.cpp
